test/files/neg/t5666.scala
object t5666 {
  new Any
  new AnyVal
  new Double
  new Float
  new Long
  new Int
  new Char
  new Short
  new Byte
  new Boolean
  new Unit
  new Nothing
}